--- a/colink.toml
+++ b/colink.toml
@@ -1,18 +1,18 @@
 [package]
-name = "unifed-example"
+name = "unifed-flower"
 version = "0.0.0"
 keywords = ["federated learning", "machine learning"]
-description = "Example UniFed protocol."
+description = "Integrating Flower framework into UniFed as a CoLink protocol."
 language = "python"
 install_script = """
-if { conda env list | grep 'colink-protocol-unifed-example'; } >/dev/null 2>&1; then
-    conda env remove -n colink-protocol-unifed-example
+if { conda env list | grep 'colink-protocol-unifed-flower'; } >/dev/null 2>&1; then
+    conda env remove -n colink-protocol-unifed-flower
 fi
-conda create -n colink-protocol-unifed-example python=3.9 -y
-conda activate colink-protocol-unifed-example
+conda create -n colink-protocol-unifed-flower python=3.9 -y
+conda activate colink-protocol-unifed-flower
 pip install .
 """
 entrypoint = """
-conda activate colink-protocol-unifed-example
-unifed-example
+conda activate colink-protocol-unifed-flower
+unifed-flower
 """
